02-platform-config/ingress/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  # Aquí está la magia del DNS dinámico para el laboratorio
  - host: alertmanager.34.175.147.63.nip.io 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: observabilidad-stack-kube-alertmanager
            port:
              number: 9093
